--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,6 +1,10 @@
+services: []
+package_name: calculator_app
 allow_embedding: false
-package_name: Custom_HTML_1
-name: Custom HTML 1
+name: calculator_app
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
   server_spec: null}
-services: []
+metadata: {}
+startup_form: Form1
+db_schema: {}
+renamed: true
